# ideabank

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: Architecture.md  CLI-Reference.md  Database-Schema.md  Extractors.md  HELP.md  Home.md  Search.md
src/ideabank/: __init__.py
src/ideabank/classification/: __init__.py  classifier.py  prompts.py  taxonomy.py
src/ideabank/cli/: __init__.py  main.py
src/ideabank/core/: __init__.py  canonicalize.py  config.py  database.py  models.py  repository.py
src/ideabank/embeddings/: __init__.py  generator.py  search.py  store.py
src/ideabank/export/: __init__.py  obsidian.py
src/ideabank/extraction/: __init__.py  article.py  arxiv.py  base.py  batch.py  github.py  router.py  youtube.py
src/ideabank/ingestors/: __init__.py  conversation.py  twitter.py
src/ideabank/processing/: __init__.py  categorizer.py
src/ideabank/search/: __init__.py  fulltext.py
